test/pass/pass_15.prsl
// RUN: %edir/prsl --codegen %s -o pass_15.ll
// RUN: clang++ -Wno-override-module pass_15.ll -o pass_15
// RUN: %S/pass_15 | filecheck %s --match-full-lines
// RUN: %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 0
// CHECK-NEXT: 0
// CHECK-NEXT: 0
// CHECK-NEXT: 0

foo = func(x1) : f
{
	if (x1 == 0)
	{
		return 0;
	}
	bar = func(x2) : b
	{
		z = 10;
		z + x2;
		if (x2 > 10)
		{
			y = 10;
		}
		print x2;
	};
	
	z = f(0) + 5;
	bar(0);
};

print b(0);
print foo(10);
