test/fail/fail_14.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: [Line 5] Error: func: Wrong return value

x = func() {
	func() { };
};
x();